@@ -43,12 +43,24 @@
 #include <sys/stat.h>
 #include "mphidflash.h"
 
-static char          *hexFileData = NULL; /* Memory-mapped hex file data */
-static char          *hexPlusOne;         /* Saves a lot of "+1" math    */
-static int            hexFd;              /* Open hex file descriptor    */
-static size_t         hexFileSize;        /* Save for use by munmap()    */
-static unsigned char  hexBuf[56];         /* Data read/written to USB    */
-extern unsigned char *usbBuf;           /* In usb code                 */
+static char          *hexFileData = NULL;  /* Memory-mapped hex file data */
+static char          *hexPlusOne;          /* Saves a lot of "+1" math    */
+static int            hexFd;               /* Open hex file descriptor    */
+static size_t         hexFileSize;         /* Save for use by munmap()    */
+static unsigned char  hexBuf[56];          /* Data read/written to USB    */
+extern unsigned char *usbBuf;              /* In usb code                 */
+unsigned char         bytesPerAddress = 1; /* Bytes in flash per address  */
+
+/****************************************************************************
+ Function    : hexSetBytesPerAddress
+ Description : Sets given byte width
+ Parameters  : unsigned char  Bytes per address
+ Returns     : Nothing (void)
+ ****************************************************************************/
+void hexSetBytesPerAddress(unsigned char bytes)
+{
+	bytesPerAddress = bytes;
+}
 
 /****************************************************************************
  Function    : hexOpen
@@ -140,7 +152,15 @@ static ErrorCode issueBlock(
 	(void)putchar('.'); fflush(stdout);
 #endif
 
-	bufWrite32(usbBuf,1,addr);
+	/* Short data packets need flushing */
+	if (len == 0) {
+		DEBUGMSG("Completing");
+		usbBuf[0] = PROGRAM_COMPLETE;
+		status    = usbWrite(1,0);
+		return status;
+	}
+
+	bufWrite32(usbBuf, 1, addr / bytesPerAddress);
 	usbBuf[5] = len;
 
 	if(verify) {
